[LANG-734] The CHAR_ARRAY cache in CharUtils duplicates the cache in java.lang.Character. [LANG-735] Deprecate CharUtils.toCharacterObject(char) in favor of java.lang.Character.valueOf(char).
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/lang/trunk@1153229 13f79535-47bb-0310-9956-ffa450edef68